<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:src="@drawable/kaba"
            android:scaleType = "centerCrop"
            android:alpha="0.60"/>


    </FrameLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="30dp"
            android:gravity="center"
            android:paddingTop="10dp"
            android:textStyle="bold"
            android:textColor="#404040"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_1"
            android:gravity="center"
            android:layout_marginTop="40dp"
            android:textSize="30dp"
            android:textStyle="bold"
            android:textColor="@color/ColorPrimaryDark" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_2"
            android:textSize="30dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/ColorPrimaryDark" />




        <Button
            android:id="@+id/login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_login"
            android:layout_marginRight="35dp"
            android:layout_marginTop="300dp"
            android:layout_marginLeft="35dp"
            android:textColor="@color/white"
            android:background="@color/ColorPrimaryDark"
            android:alpha="0.80"/>

        <Button
            android:id="@+id/skip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginRight="35dp"
            android:layout_marginLeft="35dp"
            android:text="@string/btn_skip"
            android:textColor="@color/white"
            android:background="#d61313"
            android:alpha="0.80"/>

    </LinearLayout>

</RelativeLayout>