<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
      
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/tool_bar"
            layout="@layout/tool_bar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            ></include>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible" />



        <TextView
            android:id="@+id/fname"
            android:inputType="text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_name"
            android:textSize="20dp"
            android:textColor="@color/ColorPrimary"
            android:paddingLeft="6dp"
            android:layout_marginLeft="6dp"
            android:layout_below="@+id/tool_bar"
            android:paddingTop="10dp"
            android:textColorHint="@color/ColorPrimaryDark"
            />

        <EditText
            android:id="@+id/name"
            android:inputType="text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/fname"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="60dp"
            android:textColorHint="@color/ColorPrimaryDark"
            />

        <EditText
            android:id="@+id/age"
            android:inputType="date"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_dob"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="110dp"
            android:textColorHint="@color/ColorPrimaryDark"
            />

        <TextView
            android:id="@+id/Lgender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="175dp"
            android:text="@string/str_gender"
            android:textSize="18dp"
            android:layout_marginLeft="6dp"
            android:paddingLeft="6dp"
            android:textColor="@color/ColorPrimaryDark"/>

        <Spinner
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/Lgender"
            android:layout_marginTop="178dp"
            android:entries="@array/gender_arrays"
            android:layout_alignParentRight="true"
            android:layout_marginRight="6dp"
            android:layout_alignParentEnd="true"
            android:spinnerMode="dialog">
        </Spinner>

        <TextView
            android:id="@+id/Lfamily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="225dp"
            android:text="@string/str_status"
            android:textSize="18dp"
            android:paddingLeft="6dp"
            android:layout_marginLeft="6dp"
            android:textColor="@color/ColorPrimaryDark"/>

        <Spinner
            android:id="@+id/family"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/Lgender"
            android:layout_marginTop="228dp"
            android:entries="@array/family_arrays"
            android:layout_alignParentRight="true"
            android:layout_marginRight="6dp"
            android:layout_alignParentEnd="true"
            android:spinnerMode="dialog">
        </Spinner>

        <TextView
            android:id="@+id/Lcountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="275dp"
            android:text="@string/country"
            android:textSize="18dp"
            android:paddingLeft="6dp"
            android:layout_marginLeft="6dp"
            android:textColor="@color/ColorPrimaryDark"/>

        <Spinner
            android:id="@+id/country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/Lcountry"
            android:layout_marginTop="278dp"
            android:entries="@array/country_arrays"
            android:layout_alignParentRight="true"
            android:layout_marginRight="6dp"
            android:layout_alignParentEnd="true"
            android:spinnerMode="dialog">
        </Spinner>

        <EditText
            android:inputType="number"
            android:id="@+id/dependent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_dep"
            android:layout_marginTop="330dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:textColorHint="@color/ColorPrimaryDark"
            android:visibility="gone"
            />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="400dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:text="@string/submit"
            android:id="@+id/submit"
            android:textColor="@color/white"
            android:background="@color/ColorPrimary"/>


    </RelativeLayout>
</ScrollView>