<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <!-- Product id (pid) - will be HIDDEN - used to pass to other activity -->
    <TextView
        android:id="@+id/pid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />
    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <!-- Name Label -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:paddingLeft="6dp"
        android:textStyle="bold"
        android:text="@string/str_name"
        android:textSize="17dp"
        android:gravity="right"
        android:layout_gravity="center"
        android:id="@+id/Lname"
        android:textColor="@color/ColorPrimaryDark"
        android:layout_alignParentTop="true"/>
    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dip"
        android:layout_marginLeft="5dp"
        android:textSize="17dip"
        android:textStyle="bold"
        android:layout_toRightOf="@+id/Lname"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:paddingLeft="6dp"
        android:text="@string/str_sdob"
        android:textSize="15dp"
        android:id="@+id/Lage"
        android:textColor="@color/ColorPrimaryDark"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/age"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/Lage"
        android:layout_marginTop="35dp"
        android:textSize="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:paddingLeft="6dp"
        android:text="@string/str_country"
        android:textSize="15dp"
        android:id="@+id/Lcountry"
        android:textColor="@color/ColorPrimaryDark"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/country"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/Lcountry"
        android:textSize="15dp"
        android:layout_marginTop="64dp"/>

</RelativeLayout>